adding save-dev

--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/brianzelip/just-now/issues"
   },
-  "homepage": "https://github.com/brianzelip/just-now"
+  "homepage": "https://github.com/brianzelip/just-now",
+  "devDependencies": {
+    "history": "^1.13.1",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-router": "^1.0.0"
+  }
 }
