--- a/package.json
+++ b/package.json
@@ -22,9 +22,57 @@
   },
   "homepage": "https://github.com/brianzelip/just-now",
   "devDependencies": {
+    "cssnext": "^1.8.4",
     "history": "^1.13.1",
+    "http-server": "^0.8.5",
     "react": "^0.14.2",
     "react-dom": "^0.14.2",
-    "react-router": "^1.0.0"
+    "react-router": "^1.0.0",
+    "watch": "^0.16.0"
+  },
+  "dependencies": {
+    "basscss": "^7.0.4",
+    "basscss-align": "^1.0.0",
+    "basscss-background-colors": "^1.1.1",
+    "basscss-background-images": "0.0.9",
+    "basscss-base-forms": "^2.0.0",
+    "basscss-base-reset": "^2.0.2",
+    "basscss-base-tables": "^1.0.0",
+    "basscss-base-typography": "^2.0.1",
+    "basscss-borders": "^2.0.4",
+    "basscss-btn": "^1.0.1",
+    "basscss-btn-outline": "^1.0.0",
+    "basscss-btn-primary": "^1.0.0",
+    "basscss-btn-sizes": "^1.1.0",
+    "basscss-color-base": "^2.0.0",
+    "basscss-color-forms": "^3.0.0",
+    "basscss-color-forms-dark": "^1.1.0",
+    "basscss-color-tables": "^1.0.2",
+    "basscss-colors": "^2.0.0",
+    "basscss-defaults": "^2.1.1",
+    "basscss-grid": "^1.0.3",
+    "basscss-highlight": "^0.1.0",
+    "basscss-highlight-dark": "0.0.1",
+    "basscss-input-range": "^1.1.5",
+    "basscss-media-object": "^1.0.4",
+    "basscss-positions": "^1.0.4",
+    "basscss-progress": "^1.0.5",
+    "basscss-responsive-states": "^1.0.3",
+    "basscss-responsive-white-space": "^0.1.0",
+    "basscss-table-object": "0.0.8",
+    "basscss-type-scale": "^1.0.0",
+    "basscss-ui-utility-groups": "^1.0.1",
+    "basscss-utility-headings": "0.0.6",
+    "basscss-utility-layout": "^2.0.3",
+    "basscss-utility-typography": "^2.0.0",
+    "basscss-white-space": "^1.1.2",
+    "flex-object": "^2.0.2"
+  },
+  "scripts": {
+    "css": "cssnext src/css/base.css build/built.css",
+    "minify:css": "cssnext -c src/css/base.css build/built.min.css",
+    "serve": "http-server",
+    "start": "npm run watch:css & npm run serve",
+    "watch:css": "watch 'npm run css && npm run minify:css' ./src/css"
   }
 }
